[package]
name = "rustdllproxy"
readme = "README.md"
version = "2.0.0"
edition = "2024"
description = "Crate to ease the development of proxy DLLs in Rust"
categories = ["command-line-utilities", "security"]
repository = "https://github.com/JohnSwiftC/rustdllproxy"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
