[package]
name = "dllproxymacros"
version = "0.2.1"
edition = "2024"
description = "Set of macros intended to ease DLL proxying through the LoadLibrary Windows API."
readme = "./README.md"
repository = "https://github.com/JohnSwiftC/rustdllproxy"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "minwindef"] }
syn = { version = "2.0", features = ["full"] }
quote = "1.0.40"
